--- a/pages/productos.html
+++ b/pages/productos.html
@@ -92,7 +92,7 @@
                         data-aos-anchor-placement="top-bottom">
                             <li ><a href="../pages/pedidos.html#iniciasesion" target="_blank"><img id="f1" class="logosPedidos" src="../images/generales/logo inicio de sesion.png" alt="inicia sesion"></a></li>
                             <li><img class="logosPedidos2" src="../images/generales/flecha2.png" alt="flecha"></li>
-                            <li><a href="../pages/productos.html" target="_blank"><img id="f2" class="logosPedidos" src="../images/generales/elegi tus productos logo.png" alt="elegi tus Productos"></a></li>
+                            <li><a href="../pages/productos.html#categorias"><img id="f2" class="logosPedidos" src="../images/generales/elegi tus productos logo.png" alt="elegi tus Productos"></a></li>
                             <li><img class="logosPedidos2" id="f2" src="../images/generales/flecha2.png" alt="flecha"></li>
                             <li><a href="../pages/pedidos.html" target="_blank"><img id="f3" class="logosPedidos" src="../images/generales/realiza tu pedido logo.png" alt="realiza tu pedido"></a> </li>
                             <li><img class="logosPedidos2" src="../images/generales/flecha2.png" alt="flecha"></li>
@@ -103,7 +103,7 @@
               </div>
          </section>
          <!--seccion grupo de productos-->
-         <h2 class="tituloh2">CATEGORÍAS</h2>
+         <h2 id="categorias" class="tituloh2">CATEGORÍAS</h2>
          <div class="tiposDeProductosBox">
               <ul class="listaImagenes">
                    <li> 
