--- a/pages/productos.html
+++ b/pages/productos.html
@@ -119,7 +119,7 @@
                      </a>
                   </li>
                    <li>
-                      <a href="#galletasof">
+                      <a href="#galletaof">
                           <img data-aos="zoom-in-up" class="produc" src="../images/productos/productos generales/galletasgral.png" alt="galletas, snacks y golosinas">
                           <p class="cateletra">GALLETAS</p>
                       </a>
